# CHIP8_EMULATOR

./: .gitignore  .gitmodules  CHANGELOG.md  CHIP8  CMakeCache.txt  CMakeLists.txt  CMakePresets.json  HACKING.md  Makefile  README.md  cmake_install.cmake
.github/workflows/: ci.yml
cmake/: dev-mode.cmake  install-rules.cmake  variables.cmake
myenv/: pyvenv.cfg
source/: application.cpp  application.h  chip8.cpp  chip8.h  chip8_impl.cpp  ihasloadablerom.h  lib.cpp  main.cpp
test/: CMakeLists.txt
test/source/: CHIP8_EMULATOR_test.cpp
